src/objects/Apttus_Config2__BatchJob__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The additional criteria used to select the input records for processing.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The additional criteria used to select the input records for processing.</inlineHelpText>
        <label>Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndTime__c</fullName>
        <description>The job end time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Exception__c</fullName>
        <description>The exception reported by the job</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The exception reported by the job</inlineHelpText>
        <label>Exception</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InputAgreementIds__c</fullName>
        <description>A comma separated list of rebate agreement ids provided as input for the rebate calculation job</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A comma separated list of rebate agreement ids provided as input for the rebate calculation job</inlineHelpText>
        <label>Input Agreements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InputRollupOrRebateIds__c</fullName>
        <description>A comma separated list of rollup or rebate ids provided as input for the rollup/rebate calculation job</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A comma separated list of rollup or rebate ids provided as input for the rollup/rebate calculation job</inlineHelpText>
        <label>Input Rollups Or Rebates</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__JobId__c</fullName>
        <description>ID of the apex job</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__JobSpec__c</fullName>
        <description>The job specification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Spec</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NextRunDate__c</fullName>
        <defaultValue>DATETIMEVALUE(&apos;2000-01-01 00:00:00&apos;)</defaultValue>
        <description>Indicates the date/time when the job would run next</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates the date/time when the job would run next</inlineHelpText>
        <label>Next Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The fixed end date up to which the input records will be considered for rollup or rebate calculation. Only applicable for fixed calculation period.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The fixed end date up to which the input records will be considered for rollup or rebate calculation. Only applicable for fixed calculation period.</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodSource__c</fullName>
        <description>Indicates the source field in the input business object which determines the period</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates the source field in the input business object which determines the period</inlineHelpText>
        <label>Period Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The fixed start date from which the input records  will be considered for rollup or rebate calculation. Only applicable for fixed calculation period.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The fixed start date from which the input records  will be considered for rollup or rebate calculation. Only applicable for fixed calculation period.</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartTime__c</fullName>
        <description>The job start time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>